--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 html{
-  background: rgb(52,135,210);
-  background: linear-gradient(90deg, rgba(52,135,210,1) 10%, rgba(7,145,255,1) 100%);
+  background-color: #FBAB7E;
+background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+
 }
