--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
-/* html{
+body{
   background-color: #FBAB7E;
 background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
-
-} */
+}
+.navbar{
+  background-color: #FBAB7E;
+  background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+}
